@@ -1,6 +1,7 @@
 package org.catsonkeyboard;
 
 import com.google.gson.*;
+import jakarta.persistence.Column;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.Id;
 import jakarta.persistence.Table;
@@ -15,6 +16,7 @@ import org.catsonkeyboard.dao.QueryWrap;
 import org.catsonkeyboard.entities.SyncTag;
 import org.catsonkeyboard.http.HttpClientWrap;
 
+import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.Type;
 import java.time.Instant;
@@ -33,27 +35,21 @@ import java.util.stream.Collectors;
 public class Sync {
     private EntityManager entityManager;
     private String entityPackage = "org.catsonkeyboard.entities";
-    private HashMap<String, Class> topics = new HashMap<>();
-    private LinkedHashMap<String, String> topicPrimaryKeyFields = new LinkedHashMap<>();
-    private ConcurrentLinkedHashMap<String, Subscriber> subscribers = new ConcurrentLinkedHashMap.Builder<String, Subscriber>().maximumWeightedCapacity(100).build();
-    private ConcurrentLinkedQueue<Map.Entry<String, Runnable>> queue = new ConcurrentLinkedQueue<>();
-
+    private final HashMap<String, Class<?>> topics = new HashMap<>();
+    private final LinkedHashMap<String, String> topicPrimaryKeyFields = new LinkedHashMap<>();
+    private final ConcurrentLinkedHashMap<String, Subscriber<?>> subscribers = new ConcurrentLinkedHashMap.Builder<String, Subscriber<?>>().maximumWeightedCapacity(100).build();
+    private final ConcurrentLinkedQueue<Map.Entry<String, Runnable>> queue = new ConcurrentLinkedQueue<>();
     private static ThreadPoolExecutor pool;
+
     static {
         pool = (ThreadPoolExecutor) Executors.newCachedThreadPool();
     }
 
-    public void test() {
-        loadTopics();
-        Metamodel metamodel = entityManager.getMetamodel();
-        Set<EntityType<?>> entities = metamodel.getEntities();
-    }
-
     public void Start() throws Exception {
         loadTopics();
-        List<Map.Entry<String,Subscriber>> syncs = this.subscribers.entrySet().stream().filter(p -> p.getValue().getSyncToServer()).collect(Collectors.toList());
+        List<Map.Entry<String,Subscriber<?>>> syncs = this.subscribers.entrySet().stream().filter(p -> p.getValue().getSyncToServer()).collect(Collectors.toList());
         JsonObject requestBody = new JsonObject();
-        for(Map.Entry<String, Subscriber> sync : syncs) {
+        for(Map.Entry<String, Subscriber<?>> sync : syncs) {
             String topic = sync.getValue().getTopic();
             JsonObject reqParam = new JsonObject();
             //查询本地SyncTag表中最新时间戳
@@ -79,12 +75,6 @@ public class Sync {
             if(value.isJsonArray()) {
                 JsonArray jsonArray = value.getAsJsonArray();
                 save(topic, topicPrimaryKeyFields.get(topic),jsonArray, () -> {});
-//                if(jsonArray.size() == 0) {
-//
-//                } else {
-//                    List<User> users = gson.fromJson(jsonArray,new TypeToken<List<User>>(){}.getType());
-//                    System.out.println("test");
-//                }
             }
         }
     }
@@ -93,24 +83,40 @@ public class Sync {
         Class modelClass = topics.get(topic);
 //        Metamodel metamodel = entityManager.getMetamodel();
 //        Set<EntityType<?>> entities = metamodel.getEntities();
-        Optional<Field> keyField = Arrays.stream(modelClass.getFields()).filter(p -> p.getName().equals(key)).findFirst();
+        Optional<Field> keyField = Arrays.stream(modelClass.getDeclaredFields()).filter(p -> p.getName().equals(key)).findFirst();
         Gson gson = new Gson();
         if(keyField.isEmpty()) {
             throw new Exception("entity no key");
         }
-        QueryWrap modelQuery = new QueryWrap<>(entityManager,modelClass) { };
+        QueryWrap<?> modelQuery = new QueryWrap<>(entityManager,modelClass);
         List<Object> commitObjects = new ArrayList<>();
         for(JsonElement item : data) {
             JsonObject itemValue = item.getAsJsonObject();
-            var keyValue = gson.fromJson(itemValue.get(key),keyField.getClass());
+            keyField.get().setAccessible(true);
+//            Class<?> keyFieldType = keyField.get().getType();
+//            Constructor<?> constructor = keyFieldType.getDeclaredConstructor(keyFieldType);
+//            Object keyValue = constructor.newInstance(itemValue.get(key));
+            Object keyValue = gson.fromJson(itemValue.get(key), keyField.get().getType());
             Object savedObj = modelQuery.findByKey(key, keyValue);
             if(savedObj == null) {
-                savedObj = modelClass.newInstance();
+                savedObj = modelClass.getDeclaredConstructor().newInstance();
             }
             //遍历各个json节点
             for(Map.Entry<String,JsonElement> kv : itemValue.entrySet()) {
-                Optional<Field> field = Arrays.stream(modelClass.getFields()).filter(p -> p.getName().equals(kv.getKey())).findFirst();
+                List<Field> fields = new ArrayList<>();
+                //获取父类fields
+                fields.addAll(List.of(modelClass.getSuperclass().getDeclaredFields()));
+                fields.addAll(List.of(modelClass.getDeclaredFields()));
+                Optional<Field> field = fields.stream().filter(p -> {
+                            if(p.isAnnotationPresent(Column.class)) {
+                                return p.getAnnotation(Column.class).name().equals(kv.getKey());
+                            } else {
+                                return p.getName().equals(kv.getKey());
+                            }
+                        }
+                ).findFirst();
                 if(field.isPresent()) {
+                    field.get().setAccessible(true);
                     if(field.get().isAnnotationPresent(NotServer.class)) {
                         continue;
                     }
@@ -120,7 +126,7 @@ public class Sync {
                         Long longValue = gson.fromJson(kv.getValue(), Long.class);
                         fieldValue = getDateTimeOfTimestamp(longValue);//时间戳转LocalDateTime
                     } else {
-                        fieldValue = gson.fromJson(kv.getValue(), field.get().getClass());
+                        fieldValue = gson.fromJson(kv.getValue(), field.get().getType());
                     }
 
                     field.get().setAccessible(true);
@@ -134,7 +140,9 @@ public class Sync {
         for(var commit : commitObjects) {
             entityManager.persist(commit);
         }
+        //save SyncTag
         entityManager.getTransaction().commit();
+        System.out.println("commit success");
     }
 
     public  LocalDateTime getDateTimeOfTimestamp(long timestamp) {
@@ -170,7 +178,7 @@ public class Sync {
 
     public <T> String subscribeTopic(Class<T> clazz,String topic, Supplier<String> serverFilter, Function<T, Boolean> clientFilter, Runnable action, Boolean syncToServer) {
         var uuid = UUID.randomUUID().toString().replace("-","");
-        subscribers.put(uuid, new Subscriber(topic, serverFilter, clientFilter, action, syncToServer));
+        subscribers.put(uuid, new Subscriber(topic, clazz, serverFilter, clientFilter, action, syncToServer));
         return uuid;
     }
 }
